# nexus-test

./: -w  .cursorrules  .gitignore  API_KEY_SETUP.md  CREATE_PAGE_ANALYSIS.md  DEPLOY_LOCALNET.md  DESIGN_SYSTEM.md  DEVNET_QUICK_START.md  DEVNET_SETUP.md  FAVICON_NOTE.md  OPTIMIZATION_SUMMARY.md  PROJECT_PLAN.md  README.md  RESTRUCTURE_AUDIT.md  SMART_CONTRACTS_QUICK_START.md  SMART_CONTRACTS_REQUIREMENTS.md  STRUCTURE.md  TROUBLESHOOTING.md  customrpc.md  env.example  env.localnet.example  next.config.js  notes.md  package-lock.json  package.json  tailwind.config.ts  test-endpoints.mjs
Backend/: .dockerignore  .env.example  .env.production.template  .env.staging.template  .gitignore  .gitleaks.toml  .npmrc  BACKEND_SPEC_FOR_HOMEPAGE.md  DATABASE_RECOMMENDATION.md  DOCKER.md  DOCKER_IPFS_SETUP.md  DOCKER_SEED_INSTRUCTIONS.md  Dockerfile  Dockerfile.dev  FIX_MIGRATION_ISSUE.md  FRAMEWORK_RECOMMENDATION.md  IPFS_BROWSER_GUIDE.md  IPFS_SETUP.md  MIGRATION_INSTRUCTIONS.md  PRISMA_MIGRATION_FIX.md  PROJECT_STATUS.md  QUICK_IPFS_BROWSER.md  README.md  SETUP.md  TEST_COLLECTIONS.md  TROUBLESHOOTING.md  add-mint-address.sql  docker-compose.dev.yml  docker-compose.production.yml  docker-compose.staging.yml  docker-compose.yml  docker-entrypoint.sh  ecosystem.config.js  env.example  env.localnet.example  fix-id-column.sql  fix-migrations.sh  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  (+4 more)
Frontend/: .dockerignore  .env.production.template  .env.staging.template  .gitleaks.toml  CLAUDE.md  DEPLOYMENT.md  Dockerfile  FRONTEND_BACKEND_CONNECTION.md  JS_EXECUTION_OPTIMIZATIONS.md  PERFORMANCE_OPTIMIZATIONS.md  README.md  SECURITY.md  docker-compose.production.yml  docker-compose.staging.yml  ecosystem.config.js  eslint.config.js  next.config.js  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json
admin/: .env.example  .env.production.template  .env.staging.template  .gitleaks.toml  Dockerfile  README.md  docker-compose.production.yml  docker-compose.staging.yml  (+5 more)
programs/: .gitignore  ANCHOR_BUFFER_PATCH_ISSUE.md  Anchor.toml  Cargo.toml  Dockerfile  FIX_PLATFORM_TOOLS_WINDOWS.md  FREE_COLLECTIONS_TEST_SETUP_AND_ISSUES.md  ISSUE_ANALYSIS.md  LICENSE  LOCAL_SETUP.md  LONG_METADATA_ISSUE.md  MIGRATION_GUIDE.md  README.md  REGISTRY_COLLECTION_ISSUE.md  SETUP.md  STANDARD_NFT_LAUNCHPAD_GUIDE.md  WSL_SETUP.md  WSL_TROUBLESHOOTING.md  _build_tmp.sh  _deploy.sh  _deploy2.sh  _deploy_fresh.sh  _wsl_build.sh  build-and-deploy.sh  build-docker.ps1  build.ps1  convert-key.js  deploy.ps1  docker-compose.build.yml  docker-compose.yml  fix-platform-tools.ps1  package.json  tsconfig.json
programs/docs/: ANCHOR_BUFFER_PATCH_ISSUE_V2.md  ANCHOR_COLLECTION_ACCOUNT_ISSUE.md  ANCHOR_MINT_ACCOUNTS_ISSUE.md  AUDIT_PLAN.md  DEPLOYMENT_FEES.md  DOCKER.md  FREEZE_DELEGATE_INTEGRATION.md  ISSUE_NEXUS_LAUNCHPAD.md  LOCALNET.md  METADATA_STANDARDS_IMPLEMENTATION.md  SYNC_IDL.md  TEST_COVERAGE.md  TO_TWOS_OPTION_BN_ISSUE.md  WSL2_PRODUCTION_SETUP.md
programs/fake-collection/: collection.json  download-images.ps1  download-images.sh  manifest.json
programs/fake-collection/metadata/: 0.json  1.json  10.json  100.json  1000.json  1001.json  1002.json  1003.json  1004.json  1005.json  1006.json  1007.json  1008.json  1009.json  101.json  1010.json  1011.json  1012.json  1013.json  1014.json  1015.json  1016.json  1017.json  1018.json  1019.json  102.json  1020.json  1021.json  1022.json  1023.json  1024.json  1025.json  1026.json  1027.json  1028.json  1029.json  103.json  1030.json  1031.json  1032.json  (+1460 more)
programs/programs/nexus-allowlist/: Cargo.toml
programs/programs/nexus-allowlist/src/: lib.rs
programs/programs/nexus-collection/: Cargo.toml
programs/programs/nexus-collection/src/: lib.rs
programs/programs/nexus-launchpad/: Cargo.toml
programs/programs/nexus-launchpad/src/: lib.rs  nft_mint.rs
programs/programs/nexus-payment/: Cargo.toml
programs/programs/nexus-payment/src/: lib.rs
programs/scripts/: VANITY_PROGRAM_ID.md  analyze-contract-issue.js  analyze-debug-hex.js  analyze-full-instruction.js  analyze-new-hex.js  calculate-deployment-cost.ps1  calculate-deployment-cost.sh  check-discriminator.js  debug-concatenation.js  debug-uri-length.js  decode-hex-fixed.js  decode-hex.js  deploy.ps1  deploy.sh  docker-build.ps1  docker-build.sh  docker-shell.ps1  docker-shell.sh  generate-fake-collection.ts  generate-vanity-program-id.ps1  generate-vanity-program-id.sh  init-registry-simple.js  init-registry.js  init-registry.sh  initialize-registry.ts  manual-decode.js  setup-test-env.sh  start-localnet.ps1  start-localnet.sh  strip-binaries.ps1  strip-binaries.sh  test-manual.sh  test-padding-calculation.js  test-specific.ps1  test-specific.sh  test-string-encoding.js  update-metadata-ipfs.ts  upload-images-to-ipfs.ts  verify-metadata-ipfs.ts  wsl-build.sh  (+2 more)
programs/tests/: nexus-collection-helpers.ts  nexus-collection.ts  nexus-launchpad-helpers.ts  nexus-launchpad.ts  nexus-payment-helpers.ts  nexus-payment.ts  payment-initialization.test.ts  z-access-control.test.ts  z-audit-security.test.ts  z-collection-creation.test.ts  z-collection-edge-cases-security.test.ts  z-collection-end-to-end-all-categories.test.ts  z-collection-metadata-updates.test.ts  z-collection-registry.test.ts  z-collection-status-featured.test.ts  z-config-updates-edge-cases.test.ts  z-config-updates-stress-tests.test.ts  z-config-updates.test.ts  z-edge-cases-security.test.ts  z-end-to-end-all-categories.test.ts  z-free-collections-zero-mint-price.test.ts  z-initialization-edge-cases.test.ts  z-initialization.test.ts  z-metadata-standard-validation.test.ts  z-minting-edge-cases.test.ts  z-minting.test.ts  z-optimization-tests.test.ts  z-pauseresume-edge-cases.test.ts  z-pauseresume.test.ts  z-payment-distribution.test.ts  z-payment-edge-cases-security.test.ts  z-payment-end-to-end-all-categories.test.ts  z-platform-fee.test.ts  z-trading-freeze.test.ts
programs/utils/: README.md  USAGE_EXAMPLES.md  anchor-buffer-patch.ts  idl-sync.ts  merkle-allowlist.ts  transaction-size-validator.ts
(+538 files in other folders)
