[workspace]
members = [
    "programs/nexus-launchpad",
    "programs/nexus-payment",
    "programs/nexus-collection",
]
resolver = "2"

# Patch dependencies to use versions compatible with Rust 1.79 (Solana 2.1.5 toolchain)
[patch.crates-io]
blake3 = { git = "https://github.com/BLAKE3-team/BLAKE3", tag = "1.7.0" }

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
