[package]
name = "nexus-collection"
version = "0.1.0"
description = "NeXus NFT Launchpad - Collection Management"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "nexus_collection"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
idl-build = ["anchor-lang/idl-build"]
default = []

[dependencies]
anchor-lang = "0.32.1"
mpl-token-metadata = "4.1.1"
