[package]
name = "nexus-collection"
version = "0.1.0"
description = "NeXus NFT Launchpad - Collection Management"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "nexus_collection"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
idl-build = ["anchor-lang/idl-build"]
logs = []
token-metadata = ["mpl-token-metadata"]
# Production defaults: no-idl (saves ~20-50KB), no-log-ix-name (saves CU)
# IDL is only needed for client generation, not runtime
default = ["no-idl", "no-log-ix-name"]

[dependencies]
anchor-lang = { version = "0.32.1", default-features = false, features = ["init-if-needed"] }
mpl-token-metadata = { version = "4.1.1", default-features = false, optional = true }
