[package]
name = "nexus-launchpad"
version = "0.1.0"
description = "NeXus NFT Launchpad - Minting Program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "nexus_launchpad"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
idl-build = ["anchor-lang/idl-build"]
default = []

[dependencies]
anchor-lang = { version = "0.32.1", features = ["init-if-needed"] }
