[package]
name = "nexus-launchpad"
version = "0.1.0"
description = "NeXus NFT Launchpad - Minting Program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "nexus_launchpad"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
idl-build = ["anchor-lang/idl-build"]
logs = []
# Core features for minimal deployment
core = []
# Point MPL_CORE_ID at this localnet's MPL Core clone (3C7bAz...) instead of the standard
# CoREEN... address. Build with `--features localnet` for the nexus dev validator.
localnet = []
# Optional features for extended functionality
# allowlist-module = ["nexus-allowlist"]
# payment-module = ["nexus-payment"]
# full = ["allowlist-module", "payment-module"]
# Production defaults: no-idl (saves ~20-50KB), no-log-ix-name (saves CU)
# IDL is only needed for client generation, not runtime
default = ["no-idl", "no-log-ix-name"]

[dependencies]
anchor-lang = { version = "0.32.1", default-features = false, features = ["init-if-needed"] }
anchor-spl = { version = "0.32.1", default-features = false, features = ["token"] }
sha3 = { version = "0.10", default-features = false }
# NOTE: the "anchor" feature drags in anchor-lang 0.31.x, which conflicts with this
# crate's anchor-lang 0.32.1 (two versions of Context/Bumps -> build fails). The program
# only uses mpl_core::ID + the base CPI builders/types, none of which need that feature.
mpl-core = { version = "0.11.1" }
itoa = "1.0"  # Optimized string formatting

# CPI dependencies - only include when optional modules exist
# nexus-allowlist = { path = "../nexus-allowlist", features = ["cpi"], optional = true }
# nexus-payment = { path = "../nexus-payment", features = ["cpi"], optional = true }
