[package]
name = "nexus-payment"
version = "0.1.0"
description = "NeXus NFT Launchpad - Payment & Revenue Sharing"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "nexus_payment"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
idl-build = ["anchor-lang/idl-build"]
default = []

[dependencies]
anchor-lang = "0.32.1"
