[package]
name = "nexus-payment"
version = "0.1.0"
description = "NeXus NFT Launchpad - Payment & Revenue Sharing"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "nexus_payment"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
idl-build = ["anchor-lang/idl-build"]
logs = []
# Production defaults: no-idl (saves ~20-50KB), no-log-ix-name (saves CU)
# IDL is only needed for client generation, not runtime
default = ["no-idl", "no-log-ix-name"]

[dependencies]
anchor-lang = { version = "0.32.1", default-features = false }
